[package]
name = "ramon"
version = "0.0.0"
edition = "2021"
description = "A lightweight server monitoring framework. Send emails when custom conditions are met."
documentation = "https://github.com/reujab/ramon/wiki"
repository = "https://github.com/reujab/ramon"
license = "MIT"
keywords = ["monitor", "server", "ssh", "nginx", "fail2ban"]
categories = ["command-line-utilities", "email", "parsing"]

[dependencies]
anyhow = "1"
duration-str = "0.11"
env_logger = "0.11"
log = "0.4"
notify = "6"
regex = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
